; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_dojump.c_do_pending_stack_adjust.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_dojump.c_do_pending_stack_adjust.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inhibit_defer_pop = common dso_local global i64 0, align 8
@pending_stack_adjust = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_pending_stack_adjust() #0 {
  %1 = load i64, i64* @inhibit_defer_pop, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %11

3:                                                ; preds = %0
  %4 = load i64, i64* @pending_stack_adjust, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %3
  %7 = load i64, i64* @pending_stack_adjust, align 8
  %8 = call i32 @GEN_INT(i64 %7)
  %9 = call i32 @adjust_stack(i32 %8)
  br label %10

10:                                               ; preds = %6, %3
  store i64 0, i64* @pending_stack_adjust, align 8
  br label %11

11:                                               ; preds = %10, %0
  ret void
}

declare dso_local i32 @adjust_stack(i32) #1

declare dso_local i32 @GEN_INT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
